add backend with login and singup

--- a/client/about.html
+++ b/client/about.html
@@ -26,13 +26,13 @@
         <section class="about">
             <h2>About AstraGhar</h2>
             <p>AstraGhar is a premier online shop specializing in high-quality weapons and accessories. We provide top-tier products for enthusiasts and professionals alike, ensuring safety, reliability, and innovation.</p>
-            <p>Founded in 2023, our mission is to deliver unparalleled service and cutting-edge weaponry.</p>
+            <p>Founded in 2025, our mission is to deliver unparalleled service and cutting-edge weaponry -MD SARWAR KAINAT.</p>
         </section>
     </main>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 AstraGhar. All rights reserved. | <a href="about.html">About Us</a></p>
+        <p>&copy; 2025 AstraGhar. All rights reserved. | <a href="about.html">About Us</a></p>
     </footer>
 
     <script src="script.js"></script>
